# Assignment_3

./: Board.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Player.cpp  Player.h  Radom_Player.cpp  Random_player.cpp  Random_player.h  X_0_Board.cpp  Xo_board.cpp  Xo_board.h  main.cpp
Task 3/: Board.h  CMakeLists.txt  GameManager.cpp  Player.cpp  Radom_Player.cpp  Random_Player.cpp  X_0_Board.cpp  main.cpp
Youka Task2/: GameManager.cpp  Player.cpp  RandomPlayerYouka.cpp  X_O Board.cpp  X_O Board.h  main.cpp
